# extension_chatterbox

./: README.md  pyproject.toml  setup.py
extension_chatterbox/: SUPPORTED_LANGUAGES.py  api.py  components.py  gradio_app.py  main.py  memory.py
tts_webui_extension/chatterbox/: SUPPORTED_LANGUAGES.py  gradio_app.py  main.py  memory.py
